--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "risk-dice",
+  "name": "risk-dice-simulator",
   "version": "0.1.0",
   "description": "Computes wins/loses of a risk dice match",
   "main": "index.js",
