Rename @riskgame/dice v1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "risk-dice-simulator",
-  "version": "0.1.0",
+  "name": "@riskgame/dice",
+  "version": "1.0.0",
   "description": "Computes wins/loses of a risk dice match",
   "main": "index.js",
   "scripts": {
@@ -26,13 +26,9 @@
   },
   "homepage": "https://github.com/brunoscopelliti/risk-dice#readme",
   "devDependencies": {
-    "eslint": "5.14.0",
-    "eslint-config-bruno": "2.0.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-node": "8.0.1",
-    "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-standard": "4.0.0",
-    "jest": "24.1.0"
+    "eslint": "7.25.0",
+    "eslint-config-bruno": "3.0.0",
+    "jest": "26.6.3"
   },
   "dependencies": {
     "mersenne-twister": "1.1.0"
